src/scss/styles.scss
$navwidth:     200px;
$navwidthplus: 320px;
$footerheight: 100px;
$buffsize:      20px; // Size for extra spacing, boundaries, etc.

// Overriding font sizes to add utility classes for smaller patterns.
$display-font-sizes: (
  1: 5rem,
  2: 4.5rem,
  3: 4rem,
  4: 3.5rem,
  5: 3rem,
  6: 2.5rem,
  7: 2rem,
  8: 1.5rem
);

@import "bootstrap/scss/bootstrap";

body {
    position: relative;
}

// Custom CSS
div.d-flex > nav {
    width: 100%;  // for medium breakpoint, the default -- horizontal
    @media screen and (min-width: 992px) {  // large breakpoint -- the ideal desktop experience -- left sidebar
        width: $navwidth;
        min-height: 100vh;
        z-index: 1;
    }
    @media screen and (min-width: 1200px) {  // Wider navbar for full screen on full res monitors
        width: $navwidthplus;
    }
}

main {
    @media screen and (min-width: 1200px) {
        padding-bottom: $footerheight + ($buffsize / 2);
    }
    @media screen and (min-width: 576px) and (max-width: 1199px) {
        padding-bottom: $footerheight + $buffsize;
    }
}

footer {
    max-width: 100vw;
    position: absolute;
    height: auto;
    bottom: 0;
    @media screen and (min-width: 1200px) {
        left: $navwidthplus;
        width: calc(100vw - $navwidthplus);
        /* text-align: right; */
    }
    @media screen and (min-width: 992px) {
        left: $navwidth;
        width: calc(100vw - $navwidth);
        /* text-align: right; */
    }
    @media screen and (max-width: 991px) {
        width: 100%;
    }
}

h3.card-title {
    display: inline-block;
}
.card-body {
    display: relative;
    a {
        max-height: 4em;
        align-self: space-around;
    }
}
.bi-chevron-expand {
    display: inline-block;
    position: relative;
    bottom: 3px;
}

